# cw_6

./: pyproject.toml
base/: urls.py  views.py
base/templates/base/: base.html  examples_clients.html  examples_list.html
base/templates/base/includes/: inc_footer.html  inc_menu.html
clients/: admin.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_alter_client_owner.py
clients/templates/clients/: client_confirm_delete.html  client_form.html  client_list.html
config/: settings.py  urls.py
distributions/: admin.py  models.py  urls.py  views.py
distributions/migrations/: 0001_initial.py  0002_alter_distribution_period_alter_distribution_status.py  0003_distribution_last_send_date_and_more.py  0004_alter_distribution_last_send_date_and_more.py  0005_alter_distribution_period.py  0006_alter_distribution_owner_alter_distribution_status_and_more.py  0007_alter_attempt_options_alter_distribution_status.py
distributions/templates/distributions/: attempt_detail.html  attempt_list.html  distribution_confirm_delete.html  distribution_detail.html  distribution_form.html  distribution_list.html
letters/: admin.py  models.py  urls.py  views.py
letters/migrations/: 0001_initial.py  0002_alter_letter_body_alter_letter_topic.py  0003_alter_letter_body_alter_letter_owner.py
letters/templates/letters/: letter_confirm_delete.html  letter_detail.html  letter_form.html  letter_list.html
users/: models.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
